8242267: Shenandoah: regions space needs to be aligned by os::vm_allocation_granularity()

Reviewed-by: rkennke, stuefe